RESOLVED FIXED60887
[Qt][Wk2][Symbian] Fix build after r86560
https://bugs.webkit.org/show_bug.cgi?id=60887
Summary [Qt][Wk2][Symbian] Fix build after r86560
Siddharth Mathur
Reported 2011-05-16 08:09:09 PDT
In Bug 55875, we started using USE(UNIX_DOMAIN_SOCKETS) to guard Qt-Unix and Gtk code which uses code dependent on Unix domain socket IPC. r86560 (http://trac.webkit.org/changeset/86560) should have guarded ArgumentDecoder.cpp and ArgumentEncoder.cpp too, otherwise Qt-Symbian build breaks.
Attachments
build fix for Symbian buildbot (1.91 KB, patch)
2011-05-16 08:11 PDT, Siddharth Mathur
no flags
try 2: build fix for Symbian buildbot (4.99 KB, patch)
2011-05-16 10:17 PDT, Siddharth Mathur
no flags
Siddharth Mathur
Comment 1 2011-05-16 08:11:38 PDT
Csaba Osztrogonác
Comment 2 2011-05-16 08:19:42 PDT
Comment on attachment 93644 [details] build fix for Symbian buildbot View in context: https://bugs.webkit.org/attachment.cgi?id=93644&action=review > Source/WebKit2/ChangeLog:10 > + (CoreIPC::ArgumentDecoder::~ArgumentDecoder): guard Unix and Gtk code with HAVE(UNIX_DOMAIN_SOCKETS) > + * Platform/CoreIPC/ArgumentEncoder.cpp: r=me with change HAVE to USE. Please fix it before landing.
Csaba Osztrogonác
Comment 3 2011-05-16 08:26:50 PDT
Siddharth Mathur
Comment 4 2011-05-16 10:13:13 PDT
Build still busted, re-opening
Siddharth Mathur
Comment 5 2011-05-16 10:17:55 PDT
Created attachment 93663 [details] try 2: build fix for Symbian buildbot Balazs had moved some of key QT||GTK defines to UNIX_DOMAIN_SOCKET guards, so I was caught off guard. My bad. My intention was to land Symbian parts in separate Bug 55875 (Shared Memory) and Bug 55877 (Core IPC and Process launching) In any case, here is a somewhat hacky middle ground to keep Symbian bot green until I re-baseline the Core IPC patch in Bug 55877 and get it landed.
Csaba Osztrogonác
Comment 6 2011-05-16 10:23:21 PDT
Comment on attachment 93663 [details] try 2: build fix for Symbian buildbot It is a little bit ugly workaround, but rs=me until the real fix landed.
Csaba Osztrogonác
Comment 7 2011-05-16 10:27:49 PDT
I landed it manually after I removed the unnecessarz trailing whitespaces: http://trac.webkit.org/changeset/86585
Note You need to log in before you can comment on or make changes to this bug.