[Qt][Wk2][Symbian] Fix build after r86560 https://bugs.webkit.org/show_bug.cgi?id=60887

Patch by Siddharth Mathur <siddharth.mathur@nokia.com> on 2011-05-16
Reviewed by Csaba Osztrogonác.

* Platform/CoreIPC/ArgumentDecoder.cpp:
(CoreIPC::ArgumentDecoder::~ArgumentDecoder): guard Unix and Gtk code with USE(UNIX_DOMAIN_SOCKETS)
* Platform/CoreIPC/ArgumentEncoder.cpp:
(CoreIPC::ArgumentEncoder::~ArgumentEncoder): ditto

Canonical link: https://commits.webkit.org/76224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86574 268f45cc-cd09-0410-ab3c-d52691b4dbfc